calculate distance between two points

--- a/Labbar/Labb1.ipynb
+++ b/Labbar/Labb1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -20,9 +20,14 @@
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
     "\n",
-    "# Expempel data för pichu och pickachu\n",
+    "# Expempel data för pichu och pickachu numpy importerad för att möjliggöra arrays\n",
     "pichu_data = np.array([[10, 20], [20, 30], [15, 25]])\n",
     "pikachu_data = np.array([[25, 35], [30, 40], [35, 45]]) \n",
+    "\n",
+    "#beräknar avstånd mellan två punkter\n",
+    "def calculate_distance(point1, point2):\n",
+    "    return np.sqrt(np.sum((point1 - point2) ** 2))\n",
+    "\n",
     "\n",
     "# plottar testdatan där punkterna läses in från 0 som punktens första värde som är width och 1 som är det andra värdet height\n",
     "plt.scatter(pichu_data[:, 0], pichu_data[:, 1], color='green', label='Pichu')\n",
