test of calculatefunction

--- a/Labbar/Labb1.ipynb
+++ b/Labbar/Labb1.ipynb
@@ -28,6 +28,16 @@
     "def calculate_distance(point1, point2):\n",
     "    return np.sqrt(np.sum((point1 - point2) ** 2))\n",
     "\n",
+    "def classify_new_point(new_point):\n",
+    "    all_points = np.vstack((pichu_data, pikachu_data))  # Kombinera Pichu och Pikachu-data\n",
+    "    distances = np.array([calculate_distance(new_point, point) for point in all_points])\n",
+    "    \n",
+    "    nearest_index = np.argmin(distances)  # Hitta index för den närmaste punkten\n",
+    "    \n",
+    "    if nearest_index < len(pichu_data):  # Klassificera baserat på den närmaste punkten\n",
+    "        return 'Pichu'\n",
+    "    else:\n",
+    "        return 'Pikachu'\n",
     "\n",
     "# plottar testdatan där punkterna läses in från 0 som punktens första värde som är width och 1 som är det andra värdet height\n",
     "plt.scatter(pichu_data[:, 0], pichu_data[:, 1], color='green', label='Pichu')\n",
