--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,10 +30,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Riket</th>\n",
+       "      <th>Typ av huvudman</th>\n",
+       "      <th>Totalt</th>\n",
+       "      <th>Flickor</th>\n",
+       "      <th>Pojkar</th>\n",
+       "      <th>Totalt</th>\n",
+       "      <th>Flickor</th>\n",
+       "      <th>Pojkar</th>\n",
+       "      <th>Totalt</th>\n",
+       "      <th>Flickor</th>\n",
+       "      <th>Pojkar</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Riket</td>\n",
+       "      <td>Samtliga</td>\n",
+       "      <td>106941</td>\n",
+       "      <td>51864</td>\n",
+       "      <td>55077</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>97.1</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>15.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Riket</td>\n",
+       "      <td>Kommunal</td>\n",
+       "      <td>84310</td>\n",
+       "      <td>40675</td>\n",
+       "      <td>43635</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.6</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>15.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Riket</td>\n",
+       "      <td>Enskild</td>\n",
+       "      <td>22582</td>\n",
+       "      <td>11165</td>\n",
+       "      <td>11417</td>\n",
+       "      <td>98.7</td>\n",
+       "      <td>98.8</td>\n",
+       "      <td>98.7</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>16.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Riket</td>\n",
+       "      <td>Skolverket</td>\n",
+       "      <td>49</td>\n",
+       "      <td>24</td>\n",
+       "      <td>25</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>18.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Riket Typ av huvudman  Totalt  Flickor  Pojkar  Totalt   Flickor   Pojkar   \\\n",
+       "0  Riket        Samtliga  106941    51864   55077     97.0      97.1     97.0   \n",
+       "1  Riket        Kommunal   84310    40675   43635     96.6      96.6     96.6   \n",
+       "2  Riket         Enskild   22582    11165   11417     98.7      98.8     98.7   \n",
+       "3  Riket      Skolverket      49       24      25    100.0     100.0    100.0   \n",
+       "\n",
+       "   Totalt    Flickor    Pojkar    \n",
+       "0      15.7       15.8      15.7  \n",
+       "1      15.4       15.5      15.4  \n",
+       "2      16.9       17.0      16.8  \n",
+       "3      18.5       18.9      18.2  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.read_excel(\"../data/riket2023_åk9_np.xlsx\", skiprows=8)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -173,7 +291,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.7"
   }
  },
