chanhed column names

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -54,17 +54,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Riket</th>\n",
-       "      <th>Typ av huvudman</th>\n",
+       "      <th>Plats</th>\n",
+       "      <th>Huvudman</th>\n",
        "      <th>Totalt</th>\n",
-       "      <th>Flickor</th>\n",
-       "      <th>Pojkar</th>\n",
-       "      <th>Totalt</th>\n",
-       "      <th>Flickor</th>\n",
-       "      <th>Pojkar</th>\n",
-       "      <th>Totalt</th>\n",
-       "      <th>Flickor</th>\n",
-       "      <th>Pojkar</th>\n",
+       "      <th>Flickor (A-F)</th>\n",
+       "      <th>Pojkar (A-F)</th>\n",
+       "      <th>Totalt (A-E)</th>\n",
+       "      <th>Flickor (A-E)</th>\n",
+       "      <th>Pojkar (A-E)</th>\n",
+       "      <th>Totalt (poäng)</th>\n",
+       "      <th>Flickor (poäng)</th>\n",
+       "      <th>Pojkar (poäng)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -129,20 +129,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   Riket Typ av huvudman  Totalt  Flickor  Pojkar  Totalt   Flickor   Pojkar   \\\n",
-       "0  Riket        Samtliga  106941    51864   55077     97.0      97.1     97.0   \n",
-       "1  Riket        Kommunal   84310    40675   43635     96.6      96.6     96.6   \n",
-       "2  Riket         Enskild   22582    11165   11417     98.7      98.8     98.7   \n",
-       "3  Riket      Skolverket      49       24      25    100.0     100.0    100.0   \n",
+       "   Plats    Huvudman  Totalt  Flickor (A-F)  Pojkar (A-F)  Totalt (A-E)  \\\n",
+       "0  Riket    Samtliga  106941          51864         55077          97.0   \n",
+       "1  Riket    Kommunal   84310          40675         43635          96.6   \n",
+       "2  Riket     Enskild   22582          11165         11417          98.7   \n",
+       "3  Riket  Skolverket      49             24            25         100.0   \n",
        "\n",
-       "   Totalt    Flickor    Pojkar    \n",
-       "0      15.7       15.8      15.7  \n",
-       "1      15.4       15.5      15.4  \n",
-       "2      16.9       17.0      16.8  \n",
-       "3      18.5       18.9      18.2  "
+       "   Flickor (A-E)  Pojkar (A-E)  Totalt (poäng)  Flickor (poäng)  \\\n",
+       "0           97.1          97.0            15.7             15.8   \n",
+       "1           96.6          96.6            15.4             15.5   \n",
+       "2           98.8          98.7            16.9             17.0   \n",
+       "3          100.0         100.0            18.5             18.9   \n",
+       "\n",
+       "   Pojkar (poäng)  \n",
+       "0            15.7  \n",
+       "1            15.4  \n",
+       "2            16.8  \n",
+       "3            18.2  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +156,14 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.read_excel(\"../data/riket2023_åk9_np.xlsx\", skiprows=8)"
+    "df_riket = pd.read_excel(\"../data/riket2023_åk9_np.xlsx\", skiprows=8)\n",
+    "\n",
+    "df_riket.columns = [\"Plats\", \"Huvudman\", \"Totalt\", \"Flickor (A-F)\", \"Pojkar (A-F)\",\n",
+    "              \"Totalt (A-E)\", \"Flickor (A-E)\", \"Pojkar (A-E)\",\n",
+    "              \"Totalt (poäng)\", \"Flickor (poäng)\", \"Pojkar (poäng)\"]\n",
+    "\n",
+    "\n",
+    "df_riket"
    ]
   },
   {
