--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,129 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Plats</th>\n",
-       "      <th>Huvudman</th>\n",
-       "      <th>Totalt</th>\n",
-       "      <th>Flickor (A-F)</th>\n",
-       "      <th>Pojkar (A-F)</th>\n",
-       "      <th>Totalt (A-E)</th>\n",
-       "      <th>Flickor (A-E)</th>\n",
-       "      <th>Pojkar (A-E)</th>\n",
-       "      <th>Totalt (poäng)</th>\n",
-       "      <th>Flickor (poäng)</th>\n",
-       "      <th>Pojkar (poäng)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Riket</td>\n",
-       "      <td>Samtliga</td>\n",
-       "      <td>106941</td>\n",
-       "      <td>51864</td>\n",
-       "      <td>55077</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>97.1</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>15.7</td>\n",
-       "      <td>15.8</td>\n",
-       "      <td>15.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Riket</td>\n",
-       "      <td>Kommunal</td>\n",
-       "      <td>84310</td>\n",
-       "      <td>40675</td>\n",
-       "      <td>43635</td>\n",
-       "      <td>96.6</td>\n",
-       "      <td>96.6</td>\n",
-       "      <td>96.6</td>\n",
-       "      <td>15.4</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>15.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Riket</td>\n",
-       "      <td>Enskild</td>\n",
-       "      <td>22582</td>\n",
-       "      <td>11165</td>\n",
-       "      <td>11417</td>\n",
-       "      <td>98.7</td>\n",
-       "      <td>98.8</td>\n",
-       "      <td>98.7</td>\n",
-       "      <td>16.9</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>16.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Riket</td>\n",
-       "      <td>Skolverket</td>\n",
-       "      <td>49</td>\n",
-       "      <td>24</td>\n",
-       "      <td>25</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>18.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Plats    Huvudman  Totalt  Flickor (A-F)  Pojkar (A-F)  Totalt (A-E)  \\\n",
-       "0  Riket    Samtliga  106941          51864         55077          97.0   \n",
-       "1  Riket    Kommunal   84310          40675         43635          96.6   \n",
-       "2  Riket     Enskild   22582          11165         11417          98.7   \n",
-       "3  Riket  Skolverket      49             24            25         100.0   \n",
-       "\n",
-       "   Flickor (A-E)  Pojkar (A-E)  Totalt (poäng)  Flickor (poäng)  \\\n",
-       "0           97.1          97.0            15.7             15.8   \n",
-       "1           96.6          96.6            15.4             15.5   \n",
-       "2           98.8          98.7            16.9             17.0   \n",
-       "3          100.0         100.0            18.5             18.9   \n",
-       "\n",
-       "   Pojkar (poäng)  \n",
-       "0            15.7  \n",
-       "1            15.4  \n",
-       "2            16.8  \n",
-       "3            18.2  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -161,6 +41,7 @@
     "df_riket.columns = [\"Plats\", \"Huvudman\", \"Totalt\", \"Flickor (A-F)\", \"Pojkar (A-F)\",\n",
     "              \"Totalt (A-E)\", \"Flickor (A-E)\", \"Pojkar (A-E)\",\n",
     "              \"Totalt (poäng)\", \"Flickor (poäng)\", \"Pojkar (poäng)\"]\n",
+    "\n",
     "\n",
     "\n",
     "df_riket"
@@ -179,7 +60,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Data för betyg totalt men också i procentform för de som fått A-E. Där har jag också gjort om det till decimail så man kan räkna på det\n",
+    "elevbetyg_totalt = 106766\n",
+    "flickor_totalt_betyg = 51548\n",
+    "pojkar_totalt_betyg = 55218\n",
+    "betyg_A_E_totalt = 89.1 / 100\n",
+    "betyg_A_E_flickor = 88.7 / 100\n",
+    "betyg_A_E_pojkar = 89.5 / 100\n"
+   ]
   },
   {
    "cell_type": "markdown",
