added calculation for A-E grade

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -67,7 +67,13 @@
     "pojkar_totalt_betyg = 55218\n",
     "betyg_A_E_totalt = 89.1 / 100\n",
     "betyg_A_E_flickor = 88.7 / 100\n",
-    "betyg_A_E_pojkar = 89.5 / 100\n"
+    "betyg_A_E_pojkar = 89.5 / 100\n",
+    "\n",
+    "# Beräkna det faktiska antalet elever med A-E betyg\n",
+    "betyg_A_E_totalt = elevbetyg_totalt * betyg_A_E_totalt\n",
+    "betyg_A_E_flickor = flickor_totalt_betyg * betyg_A_E_flickor\n",
+    "betyg_A_E_pojkar = pojkar_totalt_betyg * betyg_A_E_pojkar\n",
+    "\n"
    ]
   },
   {
