calculated F grades and added printfunction

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -73,7 +73,15 @@
     "betyg_A_E_totalt = elevbetyg_totalt * betyg_A_E_totalt\n",
     "betyg_A_E_flickor = flickor_totalt_betyg * betyg_A_E_flickor\n",
     "betyg_A_E_pojkar = pojkar_totalt_betyg * betyg_A_E_pojkar\n",
-    "\n"
+    "\n",
+    "# Beräkna antalet elever med F betyg samt avrundar\n",
+    "antal_F_totalt = round(elevbetyg_totalt - betyg_A_E_totalt)\n",
+    "antal_F_flickor = round(flickor_totalt_betyg - betyg_A_E_flickor)\n",
+    "antal_F_pojkar = round(pojkar_totalt_betyg - betyg_A_E_pojkar)\n",
+    "\n",
+    "resultat=print(f\"Totalt antal elever som har fått F i matematik: {antal_F_totalt}\\n\"\n",
+    "        f\"Antal flickor som har fått F i matematik: {antal_F_flickor}\\n\"\n",
+    "        f\"Antal pojkar som har fått F i matematik: {antal_F_pojkar}\")"
    ]
   },
   {
