calculation added and visulized the diagram

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -1297,6 +1297,25 @@
     "    'Pojkar med godkända slutbetyg': [56906, 58017, 58415, 60623, 60955]\n",
     "}\n",
     "\n",
+    "# Skapar en DataFrame\n",
+    "df_betyg = pd.DataFrame(data)\n",
+    "\n",
+    "# Konvertera läsår till ett användbart format. Tar de första tecknen i strängen så man får startåret\n",
+    "df_betyg['Läsår'] = df_betyg['Läsår'].str[:4].astype(int)\n",
+    "\n",
+    "# Beräknar andelen elever utan godkända betyg. 1 i detta fallet är helheten(100%)\n",
+    "# subtraherat med totala andelen betyg som är godkända delat med alla betyg inklusive underkända\n",
+    "df_betyg['Andel ej godkända Totalt'] = (1 - df_betyg['Totalt med godkända slutbetyg'] / df_betyg['Totalt']) * 100\n",
+    "df_betyg['Andel ej godkända Flickor'] = (1 - df_betyg['Flickor med godkända slutbetyg'] / df_betyg['Flickor']) * 100\n",
+    "df_betyg['Andel ej godkända Pojkar'] = (1 - df_betyg['Pojkar med godkända slutbetyg'] / df_betyg['Pojkar']) * 100\n",
+    "\n",
+    "# Skapar linjediagrammet\n",
+    "fig = px.line(df_betyg, x='Läsår', y=['Andel ej godkända Totalt', 'Andel ej godkända Flickor', 'Andel ej godkända Pojkar'],\n",
+    "              labels={'value': 'Andel ej godkända (%)', 'variable': 'Kategori', 'Läsår': 'Läsår'},\n",
+    "              title='Andel elever utan godkända betyg efter kön och år')\n",
+    "\n",
+    "# Visa diagrammet\n",
+    "fig.show()\n",
     "\n"
    ]
   },
