adding function to extract data från "Läsår"

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -199,6 +199,16 @@
     "    \"Flickor med godkända slutbetyg\", \n",
     "    \"Pojkar med godkända slutbetyg\"\n",
     "]\n",
+    "# Extraherar det första året från läsåret och konverterar till heltal\n",
+    "df[\"Läsår\"] = df[\"Läsår\"].apply(lambda x: str(x).split(\"/\")[0])\n",
+    "\n",
+    "# Omvandlar Läsår till heltal, säkerställer att vi filtrerar ut icke-numeriska värden\n",
+    "df[\"Läsår\"] = pd.to_numeric(df[\"Läsår\"], errors=\"coerce\")\n",
+    "# Tar bort rader där Läsår är NaN som ett resultat av föregående rad\n",
+    "df = df.dropna(subset=[\"Läsår\"])\n",
+    "# efter vi har tagit bort NaN-värden kan vi konvertera till int\n",
+    "df[\"Läsår\"] = df[\"Läsår\"].astype(int)\n",
+    "\n",
     "\n"
    ]
   },
