calculate faulty grades

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -209,7 +209,10 @@
     "# efter vi har tagit bort NaN-värden kan vi konvertera till int\n",
     "df[\"Läsår\"] = df[\"Läsår\"].astype(int)\n",
     "\n",
-    "\n"
+    "# Beräkna andelen elever utan godkända betyg\n",
+    "df[\"Andel ej godkända Totalt\"] = (1 - df[\"Totalt antal elever med godkända slutbetyg\"] / df[\"Totalt antal elever\"]) * 100\n",
+    "df[\"Andel ej godkända Flickor\"] = (1 - df[\"Flickor med godkända slutbetyg\"] / df[\"Flickor\"]) * 100\n",
+    "df[\"Andel ej godkända Pojkar\"] = (1 - df[\"Pojkar med godkända slutbetyg\"] / df[\"Pojkar\"]) * 100\n"
    ]
   },
   {
