--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -202,11 +202,11 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          2018,
           2019,
           2020,
           2021,
-          2022
+          2022,
+          2023
          ],
          "xaxis": "x",
          "y": [
@@ -234,11 +234,11 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          2018,
           2019,
           2020,
           2021,
-          2022
+          2022,
+          2023
          ],
          "xaxis": "x",
          "y": [
@@ -266,11 +266,11 @@
          "showlegend": true,
          "type": "scatter",
          "x": [
-          2018,
           2019,
           2020,
           2021,
-          2022
+          2022,
+          2023
          ],
          "xaxis": "x",
          "y": [
@@ -1161,15 +1161,12 @@
     "    \"Flickor med godkända slutbetyg\", \n",
     "    \"Pojkar med godkända slutbetyg\"\n",
     "]\n",
-    "# Extraherar det första året från läsåret och konverterar till heltal\n",
-    "df[\"Läsår\"] = df[\"Läsår\"].apply(lambda x: str(x).split(\"/\")[0])\n",
+    "# Filtrera bort rader som inte matchar det förväntade läsårsformatet som t.ex. 2019/20\n",
+    "df = df[df['Läsår'].str.contains('^\\d{4}/\\d{2}$', na=False)]\n",
     "\n",
-    "# Omvandlar Läsår till heltal, säkerställer att vi filtrerar ut icke-numeriska värden\n",
-    "df[\"Läsår\"] = pd.to_numeric(df[\"Läsår\"], errors=\"coerce\")\n",
-    "# Tar bort rader där Läsår är NaN som ett resultat av föregående rad\n",
-    "df = df.dropna(subset=[\"Läsår\"])\n",
-    "# efter vi har tagit bort NaN-värden kan vi konvertera till int\n",
-    "df[\"Läsår\"] = df[\"Läsår\"].astype(int)\n",
+    "# Extraherar startåret och lägger till 1 för att få slutåret\n",
+    "df['Läsår'] = df['Läsår'].str.slice(0, 4).astype(int) + 1\n",
+    "\n",
     "\n",
     "# Beräkna andelen elever utan godkända betyg\n",
     "df[\"Andel ej godkända Totalt\"] = (1 - df[\"Totalt antal elever med godkända slutbetyg\"] / df[\"Totalt antal elever\"]) * 100\n",
