dont need to change xaxes interval

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1116,10 +1116,6 @@
           1
          ],
          "dtick": 1,
-         "range": [
-          2018,
-          2023
-         ],
          "title": {
           "text": "Läsår"
          }
@@ -1179,7 +1175,7 @@
     "              title=\"Andel elever utan godkända betyg\")\n",
     "\n",
     "# Tar bort onödigt mellanrum mellan heltalsåren och utökar x-axelns intervall\n",
-    "fig.update_xaxes(dtick=1, range=[2018, 2023])\n",
+    "fig.update_xaxes(dtick=1)\n",
     "\n",
     "fig.show()\n"
    ]
