--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -4329,7 +4329,6 @@
     "# Skapa en figur för andelen saknat betyg\n",
     "fig_saknat_betyg = make_subplots(rows=1, cols=3, subplot_titles=('Förgymnasial utbildning', 'Gymnasial utbildning', 'Eftergymnasial utbildning'))\n",
     "\n",
-    "# Lägg till stapeldiagram för andelen saknat betyg för varje utbildningsnivå\n",
     "# Förgymnasial utbildning\n",
     "fig_saknat_betyg.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[63.5, 61.5, 65.3], name='Förgymnasial'), row=1, col=1)\n",
     "# Gymnasial utbildning\n",
@@ -4337,25 +4336,11 @@
     "# Eftergymnasial utbildning\n",
     "fig_saknat_betyg.add_trace(go.Bar(x=['Totalt', 'Flickor', 'Pojkar'], y=[16.8, 16.1, 17.5], name='Eftergymnasial'), row=1, col=3)\n",
     "\n",
-    "# Uppdatera layout för diagrammet med andelen saknat betyg\n",
+    "# Uppdaterar layout för diagrammet med andelen saknat betyg\n",
     "fig_saknat_betyg.update_yaxes(title_text='Andel saknat betyg (%)', range=[0, 100], row=1, col=1)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=2)\n",
     "fig_saknat_betyg.update_yaxes(range=[0, 100], row=1, col=3)\n",
     "fig_saknat_betyg.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -4370,6 +4355,244 @@
     "Se till att dokumentera vad du undersöker med markdown kombinerad med kod i Jupyter notebook eller om du\n",
     "använder Pythonskript, skriv en markdown vid sidan om. Dokumentera också vad du kommer fram till och spara alla\n",
     "visualiseringar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Typ av huvudman</th>\n",
+       "      <th>Inriktning</th>\n",
+       "      <th>Genomsnittligt elevantal</th>\n",
+       "      <th>Totalt</th>\n",
+       "      <th>Undervisning</th>\n",
+       "      <th>Totalt per elev</th>\n",
+       "      <th>Undervisning per elev</th>\n",
+       "      <th>Lokaler per elev</th>\n",
+       "      <th>Måltider per elev</th>\n",
+       "      <th>Lärverktyg per elev</th>\n",
+       "      <th>Elevhälsa per elev</th>\n",
+       "      <th>Övrigt per elev</th>\n",
+       "      <th>Noter</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Samtliga</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>361201</td>\n",
+       "      <td>47484336</td>\n",
+       "      <td>24452289</td>\n",
+       "      <td>131500</td>\n",
+       "      <td>67700</td>\n",
+       "      <td>23700</td>\n",
+       "      <td>6300</td>\n",
+       "      <td>10700</td>\n",
+       "      <td>3660</td>\n",
+       "      <td>19200</td>\n",
+       "      <td>1)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Kommunal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>248359</td>\n",
+       "      <td>33486230</td>\n",
+       "      <td>17366304</td>\n",
+       "      <td>134800</td>\n",
+       "      <td>69900</td>\n",
+       "      <td>23100</td>\n",
+       "      <td>5900</td>\n",
+       "      <td>10300</td>\n",
+       "      <td>3680</td>\n",
+       "      <td>21500</td>\n",
+       "      <td>2)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Enskild</td>\n",
+       "      <td>Samtliga</td>\n",
+       "      <td>110450</td>\n",
+       "      <td>13443430</td>\n",
+       "      <td>6765640</td>\n",
+       "      <td>121700</td>\n",
+       "      <td>61300</td>\n",
+       "      <td>24600</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>11100</td>\n",
+       "      <td>3570</td>\n",
+       "      <td>14000</td>\n",
+       "      <td>3)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Enskild</td>\n",
+       "      <td>Allmän</td>\n",
+       "      <td>108781</td>\n",
+       "      <td>13218922</td>\n",
+       "      <td>6636271</td>\n",
+       "      <td>121500</td>\n",
+       "      <td>61000</td>\n",
+       "      <td>24600</td>\n",
+       "      <td>7200</td>\n",
+       "      <td>11200</td>\n",
+       "      <td>3580</td>\n",
+       "      <td>14000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Enskild</td>\n",
+       "      <td>Internationell</td>\n",
+       "      <td>567</td>\n",
+       "      <td>98039</td>\n",
+       "      <td>59815</td>\n",
+       "      <td>173100</td>\n",
+       "      <td>105600</td>\n",
+       "      <td>26400</td>\n",
+       "      <td>10300</td>\n",
+       "      <td>9400</td>\n",
+       "      <td>3170</td>\n",
+       "      <td>18300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Enskild</td>\n",
+       "      <td>Konfessionell</td>\n",
+       "      <td>826</td>\n",
+       "      <td>93194</td>\n",
+       "      <td>50311</td>\n",
+       "      <td>112900</td>\n",
+       "      <td>60900</td>\n",
+       "      <td>22100</td>\n",
+       "      <td>7800</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>14100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Enskild</td>\n",
+       "      <td>Waldorf</td>\n",
+       "      <td>277</td>\n",
+       "      <td>33276</td>\n",
+       "      <td>19244</td>\n",
+       "      <td>120100</td>\n",
+       "      <td>69500</td>\n",
+       "      <td>22600</td>\n",
+       "      <td>9000</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>5090</td>\n",
+       "      <td>9400</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Region</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2392</td>\n",
+       "      <td>554676</td>\n",
+       "      <td>320345</td>\n",
+       "      <td>231900</td>\n",
+       "      <td>133900</td>\n",
+       "      <td>41100</td>\n",
+       "      <td>8500</td>\n",
+       "      <td>30800</td>\n",
+       "      <td>5770</td>\n",
+       "      <td>11800</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Typ av huvudman      Inriktning  Genomsnittligt elevantal    Totalt  \\\n",
+       "0        Samtliga             NaN                    361201  47484336   \n",
+       "1        Kommunal             NaN                    248359  33486230   \n",
+       "2         Enskild        Samtliga                    110450  13443430   \n",
+       "3         Enskild          Allmän                    108781  13218922   \n",
+       "4         Enskild  Internationell                       567     98039   \n",
+       "5         Enskild   Konfessionell                       826     93194   \n",
+       "6         Enskild         Waldorf                       277     33276   \n",
+       "7          Region             NaN                      2392    554676   \n",
+       "\n",
+       "   Undervisning  Totalt per elev  Undervisning per elev  Lokaler per elev  \\\n",
+       "0      24452289           131500                  67700             23700   \n",
+       "1      17366304           134800                  69900             23100   \n",
+       "2       6765640           121700                  61300             24600   \n",
+       "3       6636271           121500                  61000             24600   \n",
+       "4         59815           173100                 105600             26400   \n",
+       "5         50311           112900                  60900             22100   \n",
+       "6         19244           120100                  69500             22600   \n",
+       "7        320345           231900                 133900             41100   \n",
+       "\n",
+       "   Måltider per elev  Lärverktyg per elev  Elevhälsa per elev  \\\n",
+       "0               6300                10700                3660   \n",
+       "1               5900                10300                3680   \n",
+       "2               7200                11100                3570   \n",
+       "3               7200                11200                3580   \n",
+       "4              10300                 9400                3170   \n",
+       "5               7800                 6000                2050   \n",
+       "6               9000                 4500                5090   \n",
+       "7               8500                30800                5770   \n",
+       "\n",
+       "   Övrigt per elev Noter      \n",
+       "0            19200    1) NaN  \n",
+       "1            21500    2) NaN  \n",
+       "2            14000    3) NaN  \n",
+       "3            14000   NaN NaN  \n",
+       "4            18300   NaN NaN  \n",
+       "5            14100   NaN NaN  \n",
+       "6             9400   NaN NaN  \n",
+       "7            11800   NaN NaN  "
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "School_costs = pd.read_excel(\"../data/Gymnasieskola - Kostnader 2022 Riket.xlsx\", skiprows=6,nrows=10)\n",
+    "\n",
+    "School_costs"
    ]
   },
   {
