filters out nonunique huvudman to make a more clean chart

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -4408,7 +4408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -4428,7 +4428,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "lines",
+         "mode": "lines+markers",
          "name": "",
          "orientation": "v",
          "showlegend": false,
@@ -4437,10 +4437,6 @@
           "Samtliga",
           "Kommunal",
           "Enskild",
-          "Enskild",
-          "Enskild",
-          "Enskild",
-          "Enskild",
           "Region"
          ],
          "xaxis": "x",
@@ -4448,10 +4444,6 @@
           131500,
           134800,
           121700,
-          121500,
-          173100,
-          112900,
-          120100,
           231900
          ],
          "yaxis": "y"
@@ -5308,11 +5300,16 @@
     }
    ],
    "source": [
-    "fig1 = px.line(school_costs_clean, x=\"Typ av huvudman\", y=\"Totalt per elev\", markers=True,\n",
-    "               title=\"Genomsnittlig kostnad per elev per huvudman\",\n",
-    "               labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
+    "# Filtrera ut unika huvudmän för att undvika duplicationer\n",
+    "unique_huvudman = school_costs_clean.drop_duplicates(subset=[\"Typ av huvudman\"])\n",
     "\n",
-    "fig1.show()"
+    "# Skapa linjediagrammet\n",
+    "fig1 = px.line(unique_huvudman, x=\"Typ av huvudman\", y=\"Totalt per elev\", markers=True,\n",
+    "              title=\"Genomsnittlig kostnad per elev per huvudman\",\n",
+    "              labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
+    "\n",
+    "# Visa diagrammet\n",
+    "fig1.show()\n"
    ]
   }
  ],
