Changed so the category eNSKILD - Samtilga would show correctly

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "3            14.2  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1372,12 +1372,16 @@
          "x": [
           2018,
           2019,
+          2020,
+          2021,
           2022
          ],
          "xaxis": "x",
          "y": [
           221.7,
           222.9,
+          223.9,
+          221.2,
           220.6
          ],
          "yaxis": "y"
@@ -1400,12 +1404,16 @@
          "x": [
           2018,
           2019,
+          2020,
+          2021,
           2022
          ],
          "xaxis": "x",
          "y": [
           234.3,
           235.7,
+          235.4,
+          231.6,
           229.7
          ],
          "yaxis": "y"
@@ -1428,12 +1436,16 @@
          "x": [
           2018,
           2019,
+          2020,
+          2021,
           2022
          ],
          "xaxis": "x",
          "y": [
           209.8,
           210.9,
+          212.9,
+          211.4,
           211.9
          ],
          "yaxis": "y"
@@ -2334,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2345,96 +2357,109 @@
        },
        "data": [
         {
-         "name": "Förgymnasial",
-         "type": "bar",
+         "hovertemplate": "Kategori=Totalt meritvärde 16 ämnen<br>Läsår=%{x}<br>Meritvärde=%{y}<extra></extra>",
+         "legendgroup": "Totalt meritvärde 16 ämnen",
+         "line": {
+          "color": "#636efa",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "Totalt meritvärde 16 ämnen",
+         "orientation": "h",
+         "showlegend": true,
+         "type": "scatter",
          "x": [
-          "Totalt",
-          "Flickor",
-          "Pojkar"
+          2018,
+          2019,
+          2020,
+          2021,
+          2022
          ],
          "xaxis": "x",
          "y": [
-          163.8,
-          172.2,
-          155.8
+          221.7,
+          222.9,
+          223.9,
+          221.2,
+          220.6
          ],
          "yaxis": "y"
         },
         {
-         "name": "Gymnasial",
-         "type": "bar",
+         "hovertemplate": "Kategori=Flickor meritvärde 16 ämnen<br>Läsår=%{x}<br>Meritvärde=%{y}<extra></extra>",
+         "legendgroup": "Flickor meritvärde 16 ämnen",
+         "line": {
+          "color": "#EF553B",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "Flickor meritvärde 16 ämnen",
+         "orientation": "h",
+         "showlegend": true,
+         "type": "scatter",
          "x": [
-          "Totalt",
-          "Flickor",
-          "Pojkar"
+          2018,
+          2019,
+          2020,
+          2021,
+          2022
          ],
-         "xaxis": "x2",
+         "xaxis": "x",
          "y": [
-          197.4,
-          207.2,
-          188.2
+          234.3,
+          235.7,
+          235.4,
+          231.6,
+          229.7
          ],
-         "yaxis": "y2"
+         "yaxis": "y"
         },
         {
-         "name": "Eftergymnasial",
-         "type": "bar",
+         "hovertemplate": "Kategori=Pojkar meritvärde 16 ämnen<br>Läsår=%{x}<br>Meritvärde=%{y}<extra></extra>",
+         "legendgroup": "Pojkar meritvärde 16 ämnen",
+         "line": {
+          "color": "#00cc96",
+          "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
+         },
+         "mode": "lines",
+         "name": "Pojkar meritvärde 16 ämnen",
+         "orientation": "h",
+         "showlegend": true,
+         "type": "scatter",
          "x": [
-          "Totalt",
-          "Flickor",
-          "Pojkar"
+          2018,
+          2019,
+          2020,
+          2021,
+          2022
          ],
-         "xaxis": "x3",
+         "xaxis": "x",
          "y": [
-          239.1,
-          247.9,
-          230.7
+          209.8,
+          210.9,
+          212.9,
+          211.4,
+          211.9
          ],
-         "yaxis": "y3"
+         "yaxis": "y"
         }
        ],
        "layout": {
-        "annotations": [
-         {
-          "font": {
-           "size": 16
-          },
-          "showarrow": false,
-          "text": "Förgymnasial utbildning",
-          "x": 0.14444444444444446,
-          "xanchor": "center",
-          "xref": "paper",
-          "y": 1,
-          "yanchor": "bottom",
-          "yref": "paper"
+        "legend": {
+         "title": {
+          "text": "Kategori"
          },
-         {
-          "font": {
-           "size": 16
-          },
-          "showarrow": false,
-          "text": "Gymnasial utbildning",
-          "x": 0.5,
-          "xanchor": "center",
-          "xref": "paper",
-          "y": 1,
-          "yanchor": "bottom",
-          "yref": "paper"
-         },
-         {
-          "font": {
-           "size": 16
-          },
-          "showarrow": false,
-          "text": "Eftergymnasial utbildning",
-          "x": 0.8555555555555556,
-          "xanchor": "center",
-          "xref": "paper",
-          "y": 1,
-          "yanchor": "bottom",
-          "yref": "paper"
-         }
-        ],
+         "tracegroupgap": 0
+        },
         "template": {
          "data": {
           "bar": [
@@ -3251,26 +3276,23 @@
           }
          }
         },
+        "title": {
+         "text": "Genomsnittligt meritvärde för 16 ämnen"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
           0,
-          0.2888888888888889
-         ]
-        },
-        "xaxis2": {
-         "anchor": "y2",
-         "domain": [
-          0.35555555555555557,
-          0.6444444444444445
-         ]
-        },
-        "xaxis3": {
-         "anchor": "y3",
-         "domain": [
-          0.7111111111111111,
           1
-         ]
+         ],
+         "dtick": 1,
+         "range": [
+          2018,
+          2023
+         ],
+         "title": {
+          "text": "Läsår"
+         }
         },
         "yaxis": {
          "anchor": "x",
@@ -3278,35 +3300,9 @@
           0,
           1
          ],
-         "range": [
-          0,
-          300
-         ],
          "title": {
           "text": "Meritvärde"
          }
-        },
-        "yaxis2": {
-         "anchor": "x2",
-         "domain": [
-          0,
-          1
-         ],
-         "range": [
-          0,
-          300
-         ]
-        },
-        "yaxis3": {
-         "anchor": "x3",
-         "domain": [
-          0,
-          1
-         ],
-         "range": [
-          0,
-          300
-         ]
         }
        }
       }
@@ -3344,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4372,7 +4368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4385,8 +4381,10 @@
     "school_costs_clean = pd.read_excel(file_path, skiprows=6, nrows=10)\n",
     "school_costs_clean = school_costs_clean.dropna(axis=1, how=\"all\")\n",
     "\n",
-    "# Konsolidera \"Enskild\" kategorier till \"Enskild - Samtliga\"\n",
-    "school_costs_clean[\"Typ av huvudman\"] = school_costs_clean.apply(lambda row: \"Enskild - Samtliga\" if \"Enskild\" in row[\"Typ av huvudman\"] and row[\"Inriktning\"] == \"Samtliga\" else row[\"Typ av huvudman\"], axis=1)\n",
+    "# Konsolidera alla \"Enskild\" till \"Enskild - Samtliga\", oavsett inriktning.\n",
+    "school_costs_clean[\"Typ av huvudman\"] = school_costs_clean[\"Typ av huvudman\"].apply(\n",
+    "    lambda x: \"Enskild - Samtliga\" if \"Enskild\" in x else x\n",
+    ")\n",
     "\n"
    ]
   },
@@ -4408,7 +4406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4436,7 +4434,7 @@
          "x": [
           "Samtliga",
           "Kommunal",
-          "Enskild",
+          "Enskild - Samtliga",
           "Region"
          ],
          "xaxis": "x",
@@ -5305,12 +5303,27 @@
     "\n",
     "# Skapa linjediagrammet\n",
     "fig1 = px.line(unique_huvudman, x=\"Typ av huvudman\", y=\"Totalt per elev\", markers=True,\n",
-    "              title=\"Genomsnittlig kostnad per elev per huvudman\",\n",
-    "              labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
+    "               title=\"Genomsnittlig kostnad per elev per huvudman\",\n",
+    "               labels={\"Totalt per elev\": \"Genomsnittlig kostnad per elev (SEK)\", \"Typ av huvudman\": \"Huvudman\"})\n",
     "\n",
-    "# Visa diagrammet\n",
     "fig1.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Steg 3: Kostnadsfördelning per Elevkategori\n",
+    "\n",
+    "Vi analyserar nu hur kostnaderna fördelas över olika kategorier såsom undervisning, lokaler, måltider m.m. för att identifiera var de största investeringarna görs.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
