added categories to analyze

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -5323,7 +5323,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Definiera en lista med kostnadskategorier som vi vill analysera per elev.\n",
+    "cost_categories = [\n",
+    "    \"Undervisning per elev\",\n",
+    "    \"Lokaler per elev\",\n",
+    "    \"Måltider per elev\",\n",
+    "    \"Lärverktyg per elev\",\n",
+    "    \"Elevhälsa per elev\",\n",
+    "    \"Övrigt per elev\"\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
