creating diagram but not added to figure yet

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5329,7 +5329,128 @@
        "config": {
         "plotlyServerURL": "https://plot.ly"
        },
-       "data": [],
+       "data": [
+        {
+         "domain": {
+          "x": [
+           0,
+           0.2125
+          ],
+          "y": [
+           0,
+           1
+          ]
+         },
+         "labels": [
+          "Elevhälsa per elev",
+          "Lokaler per elev",
+          "Lärverktyg per elev",
+          "Måltider per elev",
+          "Undervisning per elev",
+          "Övrigt per elev"
+         ],
+         "name": "Samtliga",
+         "type": "pie",
+         "values": [
+          3660,
+          23700,
+          10700,
+          6300,
+          67700,
+          19200
+         ]
+        },
+        {
+         "domain": {
+          "x": [
+           0.2625,
+           0.475
+          ],
+          "y": [
+           0,
+           1
+          ]
+         },
+         "labels": [
+          "Elevhälsa per elev",
+          "Lokaler per elev",
+          "Lärverktyg per elev",
+          "Måltider per elev",
+          "Undervisning per elev",
+          "Övrigt per elev"
+         ],
+         "name": "Kommunal",
+         "type": "pie",
+         "values": [
+          3680,
+          23100,
+          10300,
+          5900,
+          69900,
+          21500
+         ]
+        },
+        {
+         "domain": {
+          "x": [
+           0.525,
+           0.7375
+          ],
+          "y": [
+           0,
+           1
+          ]
+         },
+         "labels": [
+          "Elevhälsa per elev",
+          "Lokaler per elev",
+          "Lärverktyg per elev",
+          "Måltider per elev",
+          "Undervisning per elev",
+          "Övrigt per elev"
+         ],
+         "name": "Enskild - Samtliga",
+         "type": "pie",
+         "values": [
+          17460,
+          120300,
+          42200,
+          41500,
+          358300,
+          69800
+         ]
+        },
+        {
+         "domain": {
+          "x": [
+           0.7875,
+           1
+          ],
+          "y": [
+           0,
+           1
+          ]
+         },
+         "labels": [
+          "Elevhälsa per elev",
+          "Lokaler per elev",
+          "Lärverktyg per elev",
+          "Måltider per elev",
+          "Undervisning per elev",
+          "Övrigt per elev"
+         ],
+         "name": "Region",
+         "type": "pie",
+         "values": [
+          5770,
+          41100,
+          30800,
+          8500,
+          133900,
+          11800
+         ]
+        }
+       ],
        "layout": {
         "annotations": [
          {
@@ -6234,19 +6355,16 @@
     "fig2 = make_subplots(rows=1, cols=len(unique_huvudmän), specs=[[{\"type\": \"domain\"}] * len(unique_huvudmän)],\n",
     "                     subplot_titles=unique_huvudmän)  # Titlar som unika huvudmän\n",
     "\n",
+    "# Skapa ett diagram för varje unik 'Typ av huvudman'\n",
+    "for index, huvudman in enumerate(unique_huvudmän, start=1):\n",
+    "    data_for_huvudman = costs_by_category[costs_by_category[\"Typ av huvudman\"] == huvudman]\n",
+    "    category_sum = data_for_huvudman.groupby(\"Kategori\")[\"Kostnad per elev\"].sum().reset_index()\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "fig2.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
