diagram added to fig, now u can see the cirklediagram

--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -6360,6 +6360,8 @@
     "    data_for_huvudman = costs_by_category[costs_by_category[\"Typ av huvudman\"] == huvudman]\n",
     "    category_sum = data_for_huvudman.groupby(\"Kategori\")[\"Kostnad per elev\"].sum().reset_index()\n",
     "\n",
+    "# Lägg till diagrammet till figuren\n",
+    "    fig2.add_trace(go.Pie(labels=category_sum[\"Kategori\"], values=category_sum[\"Kostnad per elev\"], name=huvudman), row=1, col=index)\n",
     "\n",
     "\n",
     "\n",
