--- a/Labbar/Labb2.ipynb
+++ b/Labbar/Labb2.ipynb
@@ -5320,7 +5320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -6321,6 +6321,9 @@
            "zerolinewidth": 2
           }
          }
+        },
+        "title": {
+         "text": "Kostnadsfördelning per elevkategori per huvudman"
         }
        }
       }
@@ -6363,6 +6366,8 @@
     "# Lägg till diagrammet till figuren\n",
     "    fig2.add_trace(go.Pie(labels=category_sum[\"Kategori\"], values=category_sum[\"Kostnad per elev\"], name=huvudman), row=1, col=index)\n",
     "\n",
+    "# Uppdatera layouten med titel\n",
+    "fig2.update_layout(title_text=\"Kostnadsfördelning per elevkategori per huvudman\")\n",
     "\n",
     "\n",
     "fig2.show()\n"
